html/regestration form/styles.css
body {
    width: 100%;
    height: 100vh;
    margin: 0;
    color: #f5f6f7;
    font-family: Tahoma;
 font-size: 16px;
  background-color: #1b1b32;
  }
  h1, p {
    margin: 1em auto;
    text-align: center;
  }
  form {
    margin: 0 auto;
    max-width: 500px;
    min-width: 300px;
    width: 60vw;
  }
  fieldset {
    border: none;
    padding-bottom: 2rem;
    padding-top : 2rem;
    padding-left: 0;
    padding-right: 0;
    border-bottom: 3px solid #3b3b4f
  }
  fieldset:last-of-type {
    border-bottom: none;}
  label { 
    display: block;
   margin: 0.5rem 0;
  }
  input, textarea, select {
    width: 100%;
    margin-top: 10px;
    margin-bottom: 0;
    margin-left: 0;
    margin-right: 0;
  }

 .inline {
  width: unset;
  margin-right: 0.5em;
  margin-top: 0;
  margin-left: 0;
  margin-bottom: 0;
  }

